# car-physics-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/tyre/: Scene.gltf  tyre.blend  tyre.gltf
shaders/glsl330/: fog_lighting.fs
src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3Collision/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3Common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3Dynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3Geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3OpenCL/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/Bullet3Serialize/Bullet2FileLoader/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/BulletCollision/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/BulletDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/BulletInverseDynamics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/BulletSoftBody/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/LinearMath/: CTestTestfile.cmake  Makefile  cmake_install.cmake
